@@ -1,8 +1,11 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.7 2004/12/13 16:17:29 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.8 2004/12/18 23:49:31 agaffney Exp $
 
 *GLI-gtkfe-0.01 (11 Dec 2004)
+
+  18 Dec 2004; Andrew Gaffney <agaffney@gentoo.org>
+  Added Load/Save buttons.
 
   12 Dec 2004; Andrew Gaffney <agaffney@gentoo.org>
   Completed rough working NetworkMounts screen: adds/removes/updates entries
